--- a/index.html
+++ b/index.html
@@ -1,59 +1,114 @@
-<!DOCTYPE html><html lang="en">
+<!DOCTYPE html>
+<html lang="en">
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
   <title>SmartInvest Arena - Real Investment Opportunities</title>
+
+  <!-- Google Font -->
   <link href="https://fonts.googleapis.com/css2?family=Inter:wght@400;700&display=swap" rel="stylesheet">
+
+  <!-- Font Awesome -->
+  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css">
+
   <style>
-    * { margin: 0; padding: 0; box-sizing: border-box; }
+    * {
+      margin: 0;
+      padding: 0;
+      box-sizing: border-box;
+    }
+
     body {
       font-family: 'Inter', sans-serif;
       background: #0d0d0d;
       color: #f4f4f4;
       line-height: 1.6;
     }
-    header, nav, footer, section {
+
+    header, nav, main, footer {
       max-width: 1000px;
       margin: auto;
       padding: 2rem 1rem;
     }
+
+    /* ===== HEADER ===== */
     header {
       text-align: center;
       background: #111;
       border-bottom: 1px solid #222;
     }
+
     header h1 {
       font-size: 2.8rem;
       color: #00ffcc;
+      margin-top: 10px;
     }
+
     header p {
       color: #aaa;
     }
+
+    /* ===== MARQUEE ===== */
+    .marquee {
+      background: #111;
+      color: #00ccff;
+      font-weight: bold;
+      padding: 0.7rem;
+    }
+
+    /* ===== NAV ===== */
     nav {
       background: #141414;
       text-align: center;
-      padding: 1rem 0;
       position: sticky;
       top: 0;
       z-index: 10;
+      padding: 1rem 0;
     }
+
     nav a {
       color: #00ffcc;
       margin: 0 1rem;
       text-decoration: none;
       font-weight: bold;
     }
+
+    /* ===== VIDEO ===== */
+    .video-container {
+      max-width: 1000px;
+      margin: 2rem auto;
+      padding: 0 1rem;
+    }
+
+    .video-container video {
+      width: 100%;
+      height: auto;
+      max-height: 520px;
+      border-radius: 12px;
+      object-fit: cover;
+      box-shadow: 0 0 20px rgba(0,255,204,0.25);
+    }
+
+    /* ===== SECTIONS ===== */
+    section {
+      margin-bottom: 3rem;
+    }
+
     section h2 {
       color: #00ccff;
       margin-bottom: 1rem;
       border-bottom: 1px solid #333;
       padding-bottom: 0.5rem;
     }
-    .investment-options, .latest-investors, .testimonials {
+
+    .investment-options,
+    .testimonials,
+    .latest-investors {
       display: grid;
       grid-template-columns: repeat(auto-fit, minmax(280px, 1fr));
       gap: 1.5rem;
     }
+
     .card {
       background: #1a1a1a;
       padding: 1rem;
@@ -61,209 +116,132 @@
       border-left: 4px solid #00ffcc;
       box-shadow: 0 0 10px rgba(0,255,204,0.1);
     }
-    .calculator input, .contact-form input, .contact-form textarea {
+
+    /* ===== CALCULATOR ===== */
+    .calculator input,
+    .calculator button {
       width: 100%;
-      margin-bottom: 1rem;
       padding: 10px;
+      margin-bottom: 1rem;
       border-radius: 6px;
       border: none;
     }
-    .calculator button, .contact-form button {
+
+    .calculator button {
       background: #00ccff;
-      border: none;
-      padding: 0.75rem;
       font-weight: bold;
       cursor: pointer;
-      width: 100%;
-      border-radius: 6px;
     }
-    .marquee {
-      background: #111;
-      overflow: hidden;
-      white-space: nowrap;
-      color: #00ccff;
-      font-weight: bold;
-      font-size: 1rem;
-      padding: 0.7rem;
-    }
+
+    /* ===== FOOTER ===== */
     footer {
       text-align: center;
       color: #777;
       font-size: 0.9rem;
-      margin-top: 4rem;
       border-top: 1px solid #222;
+      margin-top: 3rem;
     }
   </style>
 </head>
+
 <body>
+
+  <!-- Marquee -->
   <div class="marquee">
-    <marquee behavior="scroll" direction="left" scrollamount="5">
+    <marquee scrollamount="5">
       💰 Trusted by Over 10,000 Investors | 📈 Daily ROI Updates | 🧠 Smart Investing Made Easy | 🚀 Build Your Wealth Now
     </marquee>
   </div>
+
+  <!-- Header -->
   <header>
-    <img src="logo.png" alt="Smart Invest Arena" style="width: 120px; margin-top: 20px;">
+    <img src="logo.png" alt="Smart Invest Arena" style="width:120px;">
     <h1>SmartInvest Arena</h1>
     <p>Build Real Wealth Through Real Investments</p>
   </header>
-     <video width="100%" controls autoplay loop muted>
-  <source src="https://raw.githubusercontent.com/vicsmart173-prog/Smart-invest-arenas1/main/video.mp4" type="video/mp4">
-  Your browser does not support the video tag.
-</video>
+
+  <!-- Video -->
+  <div class="video-container">
+    <video controls autoplay loop muted playsinline>
+      <source src="https://raw.githubusercontent.com/vicsmart173-prog/Smart-invest-arenas1/main/video.mp4" type="video/mp4">
+      Your browser does not support the video tag.
+    </video>
+  </div>
+
+  <!-- Navigation -->
   <nav>
     <a href="#about">About</a>
     <a href="#opportunities">Opportunities</a>
-    <a href="#roi">ROI Estimates</a>
+    <a href="#roi">ROI</a>
     <a href="#calculator">Calculator</a>
-    <a href="#investors">Latest Investors</a>
     <a href="#testimonials">Testimonials</a>
     <a href="#contact">Contact</a>
-  </nav> 
-  <h2>🔐 Get Trust Wallet</h2>
-  <p>To invest securely, download the official Trust Wallet from any of the links below:</p>
-  <ul>
-    <li><a href="https://play.google.com/store/apps/details?id=com.wallet.crypto.trustapp" target="_blank">📱 Android</a></li>
-    <li><a href="https://apps.apple.com/app/trust-crypto-bitcoin-wallet/id1288339409" target="_blank">🍎 iOS</a></li>
-    <li><a href="https://trustwallet.com/" target="_blank">🌐 Official Website</a></li>
-  </ul>
-</section><section>
-  <h2>💼 Send Your Investment</h2>
-  <p><strong>BTC:</strong><br>
-    <a href="bitcoin:bc1qwecurc0f297uuveq7xl4svwzl4vavu5zv25vnm" target="_blank">bc1qwecurc0f297uuveq7xl4svwzl4vavu5zv25vnm</a>
-  </p>
-  <p><strong>Ethereum (ERC20):</strong><br>
-    <a href="ethereum:0xde486e8e461247aeb00a5cbe8eb64dad07980674" target="_blank">0xde486e8e461247aeb00a5cbe8eb64dad07980674</a>
-  </p>
-  <p><strong>USDT (TRC20):</strong><br>
-    <a href="tron:FH9eyyMvg12CVdjXuWN4q1VfawHDfAET9Zd9d7sSLz2A" target="_blank">FH9eyyMvg12CVdjXuWN4q1VfawHDfAET9Zd9d7sSLz2A</a>
-  </p>
-</section><section id="about">
-  <h2>About Us</h2>
-  <p>SmartInvest Arena is a forward-thinking investment platform offering access to lucrative opportunities across cryptocurrency, real estate, stocks, startups, and more. We aim to provide transparent and profitable investment strategies that grow your capital daily.</p>
-</section><section id="opportunities">
-  <h2>Investment Opportunities</h2>
-  <div class="investment-options">
-    <div class="card"><h3>Cryptocurrency</h3><p>Bitcoin, Ethereum, and altcoins offering 20–100% annual returns.</p></div>
-    <div class="card"><h3>Real Estate</h3><p>Rental properties and REITs with income and appreciation.</p></div>
-    <div class="card"><h3>Stock Market</h3><p>Blue chip and growth stocks with 10–15% ROI.</p></div>
-    <div class="card"><h3>Startups</h3><p>Private equity and VC with high-growth upside.</p></div>
-    <div class="card"><h3>Agriculture</h3><p>Farmland and agro-tech investments.</p></div>
-    <div class="card"><h3>Digital Assets</h3><p>Domains, NFTs, IPs for long-term value.</p></div>
-  </div>
-</section><section id="roi">
-  <h2>Estimated ROI by Category</h2>
-  <ul>
-    <li>Crypto: 20% – 100%</li>
-    <li>Real Estate: 8% – 15%</li>
-    <li>Stocks: 10% – 15%</li>
-    <li>Startups: 30% – 200%</li>
-    <li>Agriculture: 10% – 20%</li>
-    <li>Digital Assets: 15% – 50%</li>
-  </ul>
-</section><section id="calculator" class="calculator">
-  <h2>Investment Calculator</h2>
-  <input type="number" id="amount" placeholder="Amount to Invest ($)" />
-  <input type="number" id="rate" placeholder="Expected ROI (%)" />
-  <input type="number" id="months" placeholder="Duration (Months)" />
-  <button onclick="calculate()">Calculate</button>
-  <div id="result" style="margin-top:1rem; font-weight:bold; color:#00ffcc;"></div>
-</section><section id="investors">
-  <h2>Latest Investors & Profits</h2>
-  <div class="latest-investors" id="investor-list"></div>
-</section><section id="testimonials">
-  <h2>What Our Investors Say</h2>
-  <div class="testimonials">
-    <div class="card">“My portfolio grew 3x in 6 months. SmartInvest is a game changer!” – Maria K.</div>
-    <div class="card">“I started with $500 and now earning passive income daily.” – Deji A.</div>
-    <div class="card">“Professional support and real returns. Highly recommended!” – Sarah G.</div>
-  </div>
-</section><section 
-            
-<!-- Telegram Button -->
-<a href="https://t.me/smartinvestarenas" target="_blank" style="background-color:#0088cc;color:white;padding:12px 20px;border-radius:6px;text-decoration:none;font-weight:bold;display:inline-block;">
-  <i style="margin-right:8px;" class="fa-brands fa-telegram"></i> Join us on Telegram
-</a>
+  </nav>
 
-<!-- Font Awesome for the icon (only include this once in your HTML head or before </body>) -->
-<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css">
-</main>
+  <!-- Main Content -->
+  <main>
 
-<footer>
-  &copy; 2025 SmartInvest Arena. All rights reserved.
-</footer>
+    <section id="about">
+      <h2>About Us</h2>
+      <p>
+        SmartInvest Arena is a forward-thinking investment platform offering opportunities across
+        crypto, real estate, stocks, startups, agriculture, and digital assets.
+      </p>
+    </section>
 
-<!-- Firebase Integration -->
-<script type="module">
-  import { initializeApp } from "https://www.gstatic.com/firebasejs/9.6.1/firebase-app.js";
-  import { getFirestore, collection, addDoc, getDocs, orderBy, query, serverTimestamp } from "https://www.gstatic.com/firebasejs/9.6.1/firebase-firestore.js";
+    <section id="opportunities">
+      <h2>Investment Opportunities</h2>
+      <div class="investment-options">
+        <div class="card">Cryptocurrency Investments</div>
+        <div class="card">Real Estate Assets</div>
+        <div class="card">Stock Market</div>
+        <div class="card">Startup Funding</div>
+        <div class="card">Agricultural Ventures</div>
+        <div class="card">Digital Assets</div>
+      </div>
+    </section>
 
-  // Your Firebase Config
-  const firebaseConfig = {
-    apiKey: "AIzaSyB9nF_x45RPL4qN_O1xldhNhr_4AM5bXIg",
-    authDomain: "smart-invest-tracker.firebaseapp.com",
-    projectId: "smart-invest-tracker",
-    storageBucket: "smart-invest-tracker.appspot.com",
-    messagingSenderId: "464698438524",
-    appId: "1:464698438524:web:03449f9e5013bedc8a6af9",
-    measurementId: "G-E447YBQTGS"
-  };
+    <section id="roi">
+      <h2>Estimated ROI</h2>
+      <ul>
+        <li>Crypto: 20% – 100%</li>
+        <li>Real Estate: 8% – 15%</li>
+        <li>Stocks: 10% – 15%</li>
+        <li>Startups: 30% – 200%</li>
+      </ul>
+    </section>
 
-  const app = initializeApp(firebaseConfig);
-  const db = getFirestore(app);
-  console.log("Firebase initialized", firebase);
+    <section id="calculator" class="calculator">
+      <h2>Investment Calculator</h2>
+      <input type="number" placeholder="Amount ($)">
+      <input type="number" placeholder="ROI (%)">
+      <input type="number" placeholder="Months">
+      <button>Calculate</button>
+    </section>
 
-  // Post a comment
-  document.getElementById("postBtn").addEventListener("click", async () => {
-    const name = document.getElementById("comment-name").value.trim();
-    const comment = document.getElementById("comment-text").value.trim();
+    <section id="testimonials">
+      <h2>Testimonials</h2>
+      <div class="testimonials">
+        <div class="card">“My investment tripled in 6 months.”</div>
+        <div class="card">“Daily returns are real and consistent.”</div>
+        <div class="card">“Professional and transparent platform.”</div>
+      </div>
+    </section>
 
-    if (!name || !comment) {
-      alert("Please fill in all fields.");
-      return;
-    }
+    <section id="contact">
+      <h2>Join Us</h2>
+      <a href="https://t.me/smartinvestarenas" target="_blank"
+         style="background:#0088cc;color:#fff;padding:12px 20px;border-radius:6px;text-decoration:none;font-weight:bold;">
+        <i class="fa-brands fa-telegram"></i> Join us on Telegram
+      </a>
+    </section>
 
-    try {
-      await addDoc(collection(db, "comments"), {
-        name,
-        comment,
-        timestamp: serverTimestamp()
-      });
-      alert("Comment posted ✅");
-      document.getElementById("comment-name").value = "";
-      document.getElementById("comment-text").value = "";
-      loadComments();
-    } catch (e) {
-      console.log("Posting comment:", name, comment);
-    }
-  });
+  </main>
 
-  // Load comments
-  async function loadComments() {
-    const commentsContainer = document.getElementById("all-comments");
-    commentsContainer.innerHTML = "";
+  <!-- Footer -->
+  <footer>
+    &copy; 2025 SmartInvest Arena. All rights reserved.
+  </footer>
 
-    const q = query(collection(db, "comments"), orderBy("timestamp", "desc"));
-    const querySnapshot = await getDocs(q);
-
-    querySnapshot.forEach((doc) => {
-      const data = doc.data();
-      const commentDiv = document.createElement("div");
-      commentDiv.innerHTML = `<strong>${data.name}</strong><br>${data.comment}`;
-      commentsContainer.appendChild(commentDiv);
-    });
-  }
-
-  // Load on page load
-  loadComments();
-    </script><!-- Tawk.to Chat Script --><script type="text/javascript">
-var Tawk_API=Tawk_API||{}, Tawk_LoadStart=new Date();
-(function(){
-var s1=document.createElement("script"),s0=document.getElementsByTagName("script")[0];
-s1.async=true;
-s1.src='https://embed.tawk.to/6877b5cab00c4c190e1cb3c8/default';
-s1.charset='UTF-8';
-s1.setAttribute('crossorigin','*');
-s0.parentNode.insertBefore(s1,s0);
-})();
-  </script></body>
-             </html>
+</body>
+</html>
