--- a/index.html
+++ b/index.html
@@ -5,18 +5,12 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
   <title>SmartInvest Arena - Real Investment Opportunities</title>
 
-  <!-- Google Font -->
+  <!-- Fonts & Icons -->
   <link href="https://fonts.googleapis.com/css2?family=Inter:wght@400;700&display=swap" rel="stylesheet">
-
-  <!-- Font Awesome -->
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css">
 
   <style>
-    * {
-      margin: 0;
-      padding: 0;
-      box-sizing: border-box;
-    }
+    * { margin: 0; padding: 0; box-sizing: border-box; }
 
     body {
       font-family: 'Inter', sans-serif;
@@ -31,10 +25,19 @@
       padding: 2rem 1rem;
     }
 
-    /* ===== HEADER ===== */
-    header {
-      text-align: center;
+    /* Marquee */
+    .marquee {
       background: #111;
+      color: #00ccff;
+      font-weight: bold;
+      padding: 0.7rem;
+      text-align: center;
+    }
+
+    /* Header */
+    header {
+      background: #111;
+      text-align: center;
       border-bottom: 1px solid #222;
     }
 
@@ -48,15 +51,7 @@
       color: #aaa;
     }
 
-    /* ===== MARQUEE ===== */
-    .marquee {
-      background: #111;
-      color: #00ccff;
-      font-weight: bold;
-      padding: 0.7rem;
-    }
-
-    /* ===== NAV ===== */
+    /* Nav */
     nav {
       background: #141414;
       text-align: center;
@@ -73,7 +68,7 @@
       font-weight: bold;
     }
 
-    /* ===== VIDEO ===== */
+    /* Video */
     .video-container {
       max-width: 1000px;
       margin: 2rem auto;
@@ -82,17 +77,14 @@
 
     .video-container video {
       width: 100%;
-      height: auto;
       max-height: 520px;
       border-radius: 12px;
       object-fit: cover;
       box-shadow: 0 0 20px rgba(0,255,204,0.25);
     }
 
-    /* ===== SECTIONS ===== */
-    section {
-      margin-bottom: 3rem;
-    }
+    /* Sections */
+    section { margin-bottom: 3rem; }
 
     section h2 {
       color: #00ccff;
@@ -101,9 +93,13 @@
       padding-bottom: 0.5rem;
     }
 
+    ul { padding-left: 1.2rem; }
+
+    a { color: #00ffcc; }
+
     .investment-options,
-    .testimonials,
-    .latest-investors {
+    .latest-investors,
+    .testimonials {
       display: grid;
       grid-template-columns: repeat(auto-fit, minmax(280px, 1fr));
       gap: 1.5rem;
@@ -117,7 +113,7 @@
       box-shadow: 0 0 10px rgba(0,255,204,0.1);
     }
 
-    /* ===== CALCULATOR ===== */
+    /* Calculator */
     .calculator input,
     .calculator button {
       width: 100%;
@@ -133,7 +129,7 @@
       cursor: pointer;
     }
 
-    /* ===== FOOTER ===== */
+    /* Footer */
     footer {
       text-align: center;
       color: #777;
@@ -146,102 +142,153 @@
 
 <body>
 
-  <!-- Marquee -->
-  <div class="marquee">
-    <marquee scrollamount="5">
-      💰 Trusted by Over 10,000 Investors | 📈 Daily ROI Updates | 🧠 Smart Investing Made Easy | 🚀 Build Your Wealth Now
-    </marquee>
+<!-- Marquee -->
+<div class="marquee">
+  <marquee scrollamount="5">
+    💰 Trusted by Over 10,000 Investors | 📈 Daily ROI Updates | 🧠 Smart Investing Made Easy | 🚀 Build Your Wealth Now
+  </marquee>
+</div>
+
+<!-- Header -->
+<header>
+  <img src="logo.png" alt="Smart Invest Arena" style="width:120px;">
+  <h1>SmartInvest Arena</h1>
+  <p>Build Real Wealth Through Real Investments</p>
+</header>
+
+<!-- Video -->
+<div class="video-container">
+  <video controls autoplay loop muted playsinline>
+    <source src="https://raw.githubusercontent.com/vicsmart173-prog/Smart-invest-arenas1/main/video.mp4" type="video/mp4">
+    Your browser does not support the video tag.
+  </video>
+</div>
+
+<!-- Navigation -->
+<nav>
+  <a href="#about">About</a>
+  <a href="#opportunities">Opportunities</a>
+  <a href="#roi">ROI</a>
+  <a href="#calculator">Calculator</a>
+  <a href="#investors">Investors</a>
+  <a href="#testimonials">Testimonials</a>
+  <a href="#contact">Contact</a>
+</nav>
+
+<main>
+
+<!-- Trust Wallet -->
+<section>
+  <h2>🔐 Get Trust Wallet</h2>
+  <p>Download the official Trust Wallet:</p>
+  <ul>
+    <li><a href="https://play.google.com/store/apps/details?id=com.wallet.crypto.trustapp" target="_blank">📱 Android</a></li>
+    <li><a href="https://apps.apple.com/app/trust-crypto-bitcoin-wallet/id1288339409" target="_blank">🍎 iOS</a></li>
+    <li><a href="https://trustwallet.com/" target="_blank">🌐 Official Website</a></li>
+  </ul>
+</section>
+
+<!-- Wallet Addresses -->
+<section>
+  <h2>💼 Send Your Investment</h2>
+  <p><strong>BTC:</strong><br>
+    <a href="bitcoin:bc1qwecurc0f297uuveq7xl4svwzl4vavu5zv25vnm">
+      bc1qwecurc0f297uuveq7xl4svwzl4vavu5zv25vnm
+    </a>
+  </p>
+  <p><strong>Ethereum (ERC20):</strong><br>
+    <a href="ethereum:0xde486e8e461247aeb00a5cbe8eb64dad07980674">
+      0xde486e8e461247aeb00a5cbe8eb64dad07980674
+    </a>
+  </p>
+  <p><strong>USDT (TRC20):</strong><br>
+    <a href="tron:FH9eyyMvg12CVdjXuWN4q1VfawHDfAET9Zd9d7sSLz2A">
+      FH9eyyMvg12CVdjXuWN4q1VfawHDfAET9Zd9d7sSLz2A
+    </a>
+  </p>
+</section>
+
+<!-- About -->
+<section id="about">
+  <h2>About Us</h2>
+  <p>
+    SmartInvest Arena is a forward-thinking investment platform offering access to
+    cryptocurrency, real estate, stocks, startups, agriculture, and digital assets.
+  </p>
+</section>
+
+<!-- Opportunities -->
+<section id="opportunities">
+  <h2>Investment Opportunities</h2>
+  <div class="investment-options">
+    <div class="card"><h3>Cryptocurrency</h3><p>20–100% annual returns</p></div>
+    <div class="card"><h3>Real Estate</h3><p>8–15% ROI</p></div>
+    <div class="card"><h3>Stock Market</h3><p>10–15% ROI</p></div>
+    <div class="card"><h3>Startups</h3><p>30–200% ROI</p></div>
+    <div class="card"><h3>Agriculture</h3><p>10–20% ROI</p></div>
+    <div class="card"><h3>Digital Assets</h3><p>15–50% ROI</p></div>
   </div>
+</section>
 
-  <!-- Header -->
-  <header>
-    <img src="logo.png" alt="Smart Invest Arena" style="width:120px;">
-    <h1>SmartInvest Arena</h1>
-    <p>Build Real Wealth Through Real Investments</p>
-  </header>
+<!-- ROI -->
+<section id="roi">
+  <h2>Estimated ROI</h2>
+  <ul>
+    <li>Crypto: 20% – 100%</li>
+    <li>Real Estate: 8% – 15%</li>
+    <li>Stocks: 10% – 15%</li>
+    <li>Startups: 30% – 200%</li>
+    <li>Agriculture: 10% – 20%</li>
+    <li>Digital Assets: 15% – 50%</li>
+  </ul>
+</section>
 
-  <!-- Video -->
-  <div class="video-container">
-    <video controls autoplay loop muted playsinline>
-      <source src="https://raw.githubusercontent.com/vicsmart173-prog/Smart-invest-arenas1/main/video.mp4" type="video/mp4">
-      Your browser does not support the video tag.
-    </video>
+<!-- Calculator -->
+<section id="calculator" class="calculator">
+  <h2>Investment Calculator</h2>
+  <input type="number" id="amount" placeholder="Amount ($)">
+  <input type="number" id="rate" placeholder="ROI (%)">
+  <input type="number" id="months" placeholder="Months">
+  <button onclick="calculate()">Calculate</button>
+  <div id="result" style="color:#00ffcc;font-weight:bold;"></div>
+</section>
+
+<!-- Testimonials -->
+<section id="testimonials">
+  <h2>Testimonials</h2>
+  <div class="testimonials">
+    <div class="card">“My portfolio grew 3x in 6 months.”</div>
+    <div class="card">“Daily passive income is real.”</div>
+    <div class="card">“Professional and transparent.”</div>
   </div>
+</section>
 
-  <!-- Navigation -->
-  <nav>
-    <a href="#about">About</a>
-    <a href="#opportunities">Opportunities</a>
-    <a href="#roi">ROI</a>
-    <a href="#calculator">Calculator</a>
-    <a href="#testimonials">Testimonials</a>
-    <a href="#contact">Contact</a>
-  </nav>
+<!-- Telegram -->
+<section id="contact">
+  <a href="https://t.me/smartinvestarenas" target="_blank"
+     style="background:#0088cc;color:#fff;padding:12px 20px;border-radius:6px;text-decoration:none;font-weight:bold;">
+    <i class="fa-brands fa-telegram"></i> Join us on Telegram
+  </a>
+</section>
 
-  <!-- Main Content -->
-  <main>
+</main>
 
-    <section id="about">
-      <h2>About Us</h2>
-      <p>
-        SmartInvest Arena is a forward-thinking investment platform offering opportunities across
-        crypto, real estate, stocks, startups, agriculture, and digital assets.
-      </p>
-    </section>
+<footer>
+  &copy; 2025 SmartInvest Arena. All rights reserved.
+</footer>
 
-    <section id="opportunities">
-      <h2>Investment Opportunities</h2>
-      <div class="investment-options">
-        <div class="card">Cryptocurrency Investments</div>
-        <div class="card">Real Estate Assets</div>
-        <div class="card">Stock Market</div>
-        <div class="card">Startup Funding</div>
-        <div class="card">Agricultural Ventures</div>
-        <div class="card">Digital Assets</div>
-      </div>
-    </section>
-
-    <section id="roi">
-      <h2>Estimated ROI</h2>
-      <ul>
-        <li>Crypto: 20% – 100%</li>
-        <li>Real Estate: 8% – 15%</li>
-        <li>Stocks: 10% – 15%</li>
-        <li>Startups: 30% – 200%</li>
-      </ul>
-    </section>
-
-    <section id="calculator" class="calculator">
-      <h2>Investment Calculator</h2>
-      <input type="number" placeholder="Amount ($)">
-      <input type="number" placeholder="ROI (%)">
-      <input type="number" placeholder="Months">
-      <button>Calculate</button>
-    </section>
-
-    <section id="testimonials">
-      <h2>Testimonials</h2>
-      <div class="testimonials">
-        <div class="card">“My investment tripled in 6 months.”</div>
-        <div class="card">“Daily returns are real and consistent.”</div>
-        <div class="card">“Professional and transparent platform.”</div>
-      </div>
-    </section>
-
-    <section id="contact">
-      <h2>Join Us</h2>
-      <a href="https://t.me/smartinvestarenas" target="_blank"
-         style="background:#0088cc;color:#fff;padding:12px 20px;border-radius:6px;text-decoration:none;font-weight:bold;">
-        <i class="fa-brands fa-telegram"></i> Join us on Telegram
-      </a>
-    </section>
-
-  </main>
-
-  <!-- Footer -->
-  <footer>
-    &copy; 2025 SmartInvest Arena. All rights reserved.
-  </footer>
+<!-- Tawk.to -->
+<script type="text/javascript">
+var Tawk_API=Tawk_API||{}, Tawk_LoadStart=new Date();
+(function(){
+var s1=document.createElement("script"),s0=document.getElementsByTagName("script")[0];
+s1.async=true;
+s1.src='https://embed.tawk.to/6877b5cab00c4c190e1cb3c8/default';
+s1.charset='UTF-8';
+s1.setAttribute('crossorigin','*');
+s0.parentNode.insertBefore(s1,s0);
+})();
+</script>
 
 </body>
 </html>
